CL-16 - Config class now has the option to specify timeouts (in seconds), with sensible defaults when not explicitly provided. Also, now improved client handling, as clients were recreated on each request. + merge master